--- a/src/sections/section5/Section5.module.css
+++ b/src/sections/section5/Section5.module.css
@@ -5,6 +5,7 @@
   margin: 0 auto;
   padding-top: 210px;
   padding-bottom: 210px;
+  overflow-x: hidden;
 
   h2 {
     margin: 0 auto;
